fix: update default variable list gap

--- a/packages/gatsby-theme-basic/src/components/modularity-modules/posts-modules/IndexPostsModule.module.css
+++ b/packages/gatsby-theme-basic/src/components/modularity-modules/posts-modules/IndexPostsModule.module.css
@@ -1,3 +1,4 @@
+
 .excerpt {
   display: -webkit-box;
   -webkit-line-clamp: 4;
@@ -10,7 +11,8 @@
   font-size: var(--card-input-excerpt-font-size, 1rem);
 
 }
+
 .secondaryList {
-  --list-gap: 0.5rem;
+  --list-gap: 2rem;
   --focus-outset: calc((var(--list-gap, 0) - var(--list-rule-width, 1px)) / 2);
 }
